appId: com.viscouspot.gitsync
---
- openLink:
    link: https://github.com/settings/keys
    browser: true
- scrollUntilVisible:
    element: "New SSH Key"
    direction: DOWN
- tapOn: "New SSH Key"
- scrollUntilVisible:
    element: "Add SSH Key"
    direction: DOWN
- tapOn: "Title"
- inputRandomNumber
- hideKeyboard
- longPressOn:
    text: "Key"
- tapOn: "Paste"
- tapOn: "Add SSH Key"
- assertVisible: "You have successfully added the key.*"
- stopApp: org.lineageos.jelly
