appId: com.viscouspot.gitsync
---
- runFlow: ./assert.yaml
- scrollUntilVisible:
    element: "GitSync"
    direction: DOWN
- tapOn: "GitSync"
- assertVisible: "Use GitSync"
- tapOn: "Use GitSync"
- tapOn: "Allow"
- back
