appId: com.viscouspot.gitsync
---
- runFlow:
    when:
      platform: Android
    commands:
      - launchApp:
          appId: com.viscouspot.gitsync
- assertVisible: "GitSync"
- tapOn: "more sync options"
- assertVisible: "MERGE CONFLICT"
- takeScreenshot: generate_screenshots/raw/screenshot_merge_conflict
- runFlow:
    when:
      platform: iOS
    commands:
      - runFlow: ../common/back.yaml
