appId: com.viscouspot.gitsync
---
- tapOn: AUTHOR NAME
- tapOn:
    below: AUTHOR NAME
- eraseText
- inputText: "ViscousTests"
- hideKeyboard
